r356 (10. 11. 2025):
VR: Fixed crashes related to Waypoints

r355 (09. 11. 2025):
Menu: Redesigned options menu to use Vanilla style

r354 (04. 11. 2025):
Fixed Beardlib fix not working as intended

r353 (01. 11. 2025):
Experience: Fixed nil value in infamy bonus

r352 (30. 10. 2025):
Experience: Fixed a possible crash when job is not active

r351 (28. 10. 2025):
Aggregated Health Equipment Tracker: Fixed an issue where panel is misaligned
Buffs: Fixed an issue where Interact buff is not visible when putting on mask
Buffs: Optimization in Biker buff
Buffs: Removed persistent state from Maniac, Biker, Berserker and Yakuza - These buffs will be visible if the skill/perk is equipped
Buffs: Removed Hysteria Stacks Refresh option - Buff gets updated once game synces current amount of Hysteria Stacks to other players (once every 4s)
Buffs: Reworked Maniac buff to show amount of Hysteria Stacks and current absorption

r350 (22. 10. 2025):
Buffs: Fixed a crash when ability timer is disabled

r349 (21. 10. 2025):
Added remaining Persistent state to buffs in perks with abilities
Added buff for "Tactical Reload" from Copycat perk
Bloodthirst Buff: Fixed visual 0x multiplier after spawn
Buffs: Fixed incorrect number of ability recharge timers
Buffs: Fixed missing options for Tag Team - Absorption
Buffs: Fixed Stoic's applied damage over-time not working (regression from r249)
Sicario's Smoke Bomb: Fixed waypoint to the cloud always have white color and not color of the thrower

r348 (10. 10. 2025):
Buffs: Fixed an issue where some Buffs do not update after drop in
Buffs: Removed "Bloodthirst Ratio" and Bloodthirst Gauge will appear on the screen as long the skill is equipped
Player Ping Tracker: Fixed an empty space
The White House: Deployables left in the PEOC are ignored after leaving

r347 (03. 10. 2025):
Holdout: First World Bank: Fixed a load crash on client
Money Tracker: Fixed an issue where ransom payout is not counted in Holdout

r346 (29. 09. 2025):